2006-04-10  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (visit_print_format): Call
	_stp_snprintf() instead of snprintf().

2006-04-09  Martin Hunt  <hunt@redhat.com>
	Add binary printf support.
	
	* elaborate.cxx (visit_print_format): Don't include
	conv_literal or conv_size  in components vector.
	Add conv_binary to switch statement.
	
	* translate.cxx (visit_print_format): Eliminate
	special cast to (long long) for pe_long because new
	vsnprintf uses int64_t.

	* staptree.h (struct print_format): Add conv_binary and conv_size.

	* staptree.cxx (components_to_string): Add conv_binary case.
	Add conv_size case.
	(string_to_components): Add cases for 'b' and 'n'

2006-04-08  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (resolve_prologue_endings): Rewrote.
	(resolve_prologue_endings2): Removed.

	* gen-stapmark.h: Emit a 0-arity marker.
	* stapmark.h: Regenerated for arities 0..6.

2006-04-04  Roland McGrath  <roland@redhat.com>

	* configure.ac: Bump version to 0.5.5.
	Require elfutils-0.120.
	* configure: Regenerated.
	* systemtap.spec.in: Likewise.

	* main.cxx (version): Use dwfl_version.

	* loc2c.c (array_stride): stride_size -> byte_stride

2006-04-04 Tom Zanussi  <zanussi@us.ibm.com>

	* stp_check: Change test for relay vs relayfs

2006-03-30  Martin Hunt  <hunt@redhat.com>

	* tapsets.cxx (dwarf_derived_probe::emit_registrations):
	Change maxactive so single-processor kernels using
	kretprobes don't get lots of dropped probes.

2006-03-30  Frank Ch. Eigler  <fche@elastic.org>

	PR 953, part 1
	* tapsets.cxx: (mark_derived_probe*): New classes.
	(register_standard_tapsets): Register kernel/module.mark() family.
	* stapmark.h: New header for static instrumentation markers.
	* gen-stapmark.h: New perl script to generate it.
	* elaborate.cxx (derived_probe ctor): Ignore null location*.

2006-03-29  Josh Stone  <joshua.i.stone@intel.com>

	* tapsets.cxx (hrtimer_derived_probe::*): creates a probe point
	based on the hrtimer APIs.